# Emotion-Analysis

./: .gitignore  README.md
cpp_client/: CMakeLists.txt  LabelUtils.cpp  LabelUtils.h  TextPreprocessor.cpp  TextPreprocessor.h  desktop.ini  imgui_impl_glfw.cpp  main.cpp
python_ml_server/model/: word_index.txt
python_ml_server/scripts/: app.py  train.py
